ISIS-2871: housekeeping